# kotkowo-client

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix  flake.nix  rust-analyzer.json
schemas/: kotkowo.graphql
src/: entity.rs  errors.rs  lib.rs  models.rs  options.rs  queries.rs  schema.rs
src/queries/: adopted_cat.rs  advice.rs  advice_article.rs  announcement.rs  announcement_article.rs  article_view_count.rs  cat.rs  cat_commons.rs  commons.rs  external_media.rs  found_cat.rs  get_cat.rs  last_view_pull.rs  looking_for_home.rs  lost_cat.rs  update_views.rs  virtual_cat.rs
src/queries/snapshots/: kotkowo_client__queries__get_cat__tests__cat_get_query.snap
src/snapshots/: kotkowo_client__tests__cat_gotten.snap  kotkowo_client__tests__get_cat.snap  kotkowo_client__tests__get_cat.snap.new  kotkowo_client__tests__list_cat-2.snap.new  kotkowo_client__tests__list_cat.snap  kotkowo_client__tests__list_cat.snap.new
