[package]
name = "kotkowo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
cynic = { version = "3", features = [ "http-reqwest-blocking" ] }
reqwest = { version = "0.11.24", features = [ "blocking" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.114"

[build-dependencies]
cynic-codegen = { version = "3" }

