[package]
name = "kotkowo-client"
version = "0.2.3"
edition = "2021"

[dependencies]
cynic = { version = "3", features = [ "http-reqwest-blocking" ] }
reqwest = { version = "0.12", features = [ "blocking" ] }
serde = { version = "1.0.197", features = [ "derive", "rc" ] }
serde_json = "1.0.114"
snafu = { version = "0.8.1" }
rustler = { version = "0.32.1", optional = true }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[features]
elixir_support = ["dep:rustler"]
